--- a/index.html
+++ b/index.html
@@ -8,8 +8,15 @@
 		<title>D3</title>
 	</head>
 	<body>
-		<h1>D3</h1>
-		<svg id="barChart"></svg>
+		<div>
+			<h2>Completely Accurate Population Data</h2>
+			<svg id="barChart"></svg>
+		</div>
+
+		<div>
+			<h2>Projected Number of DevOps Engineers</h2>
+			<svg id="lineChart"></svg>
+		</div>
 
 		<script src="https://d3js.org/d3.v7.min.js"></script>
 		<script src="app.js"></script>
